@@ -1,8 +1,13 @@
+2012-08-16  Simson Garfinkel  <simsong@Mucha.local>
+
+	* configure.ac: Increased version number to 1.2.9
+
+
+	* src/main.cpp (main): fixed compile bugs that resulted from adoption of standard DFXML header.
+
 2012-08-08  Simson Garfinkel  <simsong@FC17>
 
 	* src/tcpdemux.h: removed struct ip as it was redundent to struct iphdr
-
-	* configure.ac: Increased version number to 1.3.0
 
 	* configure.ac: tcpflow now compiles under mingw for Windows
 
